--- a/T_shirt/templates/T_shirt/result.html
+++ b/T_shirt/templates/T_shirt/result.html
@@ -15,7 +15,7 @@
 <body>
 	
 	<div class="container">
-	<h5><b>Your T-Shirt Size is(Males only)</b></h5>
+	<h5><b>Your T-Shirt Size is</b></h5>
 	<h5><b>'{{data}}'</b> Proceed To purchase</h5>
 	</div>
 
