--- a/T_shirt/templates/T_shirt/index.html
+++ b/T_shirt/templates/T_shirt/index.html
@@ -23,7 +23,7 @@
     	</div>
     	<div class="form-group">
 	      <label for="uname"><b>Weight[K.G]</b></label>
-	      <p><input type="text" class="form-control" id="name" placeholder="Enter Your weight kgs" name="weight" required></p>
+	      <p><input type="text" class="form-control" id="name" placeholder="Enter Your weight in kgs" name="weight" required></p>
     	</div>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
